--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.16.1
   shared_preferences: ^0.5.6+3
   rect_getter: 0.0.1
+  flutter_launcher_icons: ^0.7.3
 
 
   # The following adds the Cupertino Icons font to your application.
