--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,5 +76,6 @@ flutter {
 
 dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.android.gms:play-services-ads:19.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
