Configured iOS .plist to show banner ad

--- a/ios/config/free/GoogleService-Info.plist
+++ b/ios/config/free/GoogleService-Info.plist
@@ -32,5 +32,7 @@
 	<string>1:1006447338874:ios:b30ccb22357159583462c3</string>
 	<key>DATABASE_URL</key>
 	<string>https://billsapp-11a23.firebaseio.com</string>
+	<key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-3969397110418936~4390995672</string>
 </dict>
 </plist>
